# apigrpc/apigrpc.swagger.json
@@ -1374,7 +1374,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/apiEvent"
+              "$ref": "#/definitions/nakamaapiEvent"
             }
           }
         ],
@@ -1866,30 +1866,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "type": "string",
-                  "description": "Name."
-                },
-                "description": {
-                  "type": "string",
-                  "description": "Description string."
-                },
-                "langTag": {
-                  "type": "string",
-                  "description": "Lang tag."
-                },
-                "avatarUrl": {
-                  "type": "string",
-                  "description": "Avatar URL."
-                },
-                "open": {
-                  "type": "boolean",
-                  "description": "Open is true if anyone should be allowed to join, or false if joins must be approved by a group admin."
-                }
-              },
-              "description": "Update fields in a given group."
+              "$ref": "#/definitions/NakamaUpdateGroupBody"
             }
           }
         ],
@@ -2272,39 +2249,6 @@
         ]
       }
     },
-    "/v2/iap/purchase/facebookinstant": {
-      "post": {
-        "summary": "Validate FB Instant IAP Receipt",
-        "operationId": "Nakama_ValidatePurchaseFacebookInstant",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiValidatePurchaseResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiValidatePurchaseFacebookInstantRequest"
-            }
-          }
-        ],
-        "tags": [
-          "Nakama"
-        ]
-      }
-    },
     "/v2/iap/purchase/google": {
       "post": {
         "summary": "Validate Google IAP Receipt",
@@ -2330,39 +2274,6 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/apiValidatePurchaseGoogleRequest"
-            }
-          }
-        ],
-        "tags": [
-          "Nakama"
-        ]
-      }
-    },
-    "/v2/iap/purchase/huawei": {
-      "post": {
-        "summary": "Validate Huawei IAP Receipt",
-        "operationId": "Nakama_ValidatePurchaseHuawei",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiValidatePurchaseResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiValidatePurchaseHuaweiRequest"
             }
           }
         ],
@@ -3757,6 +3668,32 @@
       },
       "description": "A single user-role pair."
     },
+    "NakamaUpdateGroupBody": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": "Name."
+        },
+        "description": {
+          "type": "string",
+          "description": "Description string."
+        },
+        "langTag": {
+          "type": "string",
+          "description": "Lang tag."
+        },
+        "avatarUrl": {
+          "type": "string",
+          "description": "Avatar URL."
+        },
+        "open": {
+          "type": "boolean",
+          "description": "Open is true if anyone should be allowed to join, or false if joins must be approved by a group admin."
+        }
+      },
+      "description": "Update fields in a given group."
+    },
     "UserGroupListUserGroup": {
       "type": "object",
       "properties": {
@@ -4187,32 +4124,6 @@
         }
       },
       "description": "Batch delete storage objects."
-    },
-    "apiEvent": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "description": "An event name, type, category, or identifier."
-        },
-        "properties": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          },
-          "description": "Arbitrary event property values."
-        },
-        "timestamp": {
-          "type": "string",
-          "format": "date-time",
-          "description": "The time when the event was triggered."
-        },
-        "external": {
-          "type": "boolean",
-          "description": "True if the event came directly from a client call, false otherwise."
-        }
-      },
-      "description": "Represents an event to be passed through the server to registered event handlers."
     },
     "apiFriend": {
       "type": "object",
@@ -4652,6 +4563,10 @@
           "type": "boolean",
           "description": "Open flag."
         },
+        "hidden": {
+          "type": "boolean",
+          "description": "Hidden flag."
+        },
         "maxSize": {
           "type": "integer",
           "format": "int32",
@@ -5045,6 +4960,10 @@
         "authoritative": {
           "type": "boolean",
           "description": "Whether the leaderboard was created authoritatively or not."
+        },
+        "joinRequired": {
+          "type": "boolean",
+          "description": "Whether the user must join the tournament before being able to submit scores."
         }
       },
       "description": "A tournament on the server."
@@ -5259,20 +5178,6 @@
       },
       "title": "Apple IAP Purchases validation request"
     },
-    "apiValidatePurchaseFacebookInstantRequest": {
-      "type": "object",
-      "properties": {
-        "signedRequest": {
-          "type": "string",
-          "description": "Base64 encoded Facebook Instant signedRequest receipt data payload."
-        },
-        "persist": {
-          "type": "boolean",
-          "title": "Persist the purchase"
-        }
-      },
-      "title": "Facebook Instant IAP Purchase validation request"
-    },
     "apiValidatePurchaseGoogleRequest": {
       "type": "object",
       "properties": {
@@ -5286,24 +5191,6 @@
         }
       },
       "title": "Google IAP Purchase validation request"
-    },
-    "apiValidatePurchaseHuaweiRequest": {
-      "type": "object",
-      "properties": {
-        "purchase": {
-          "type": "string",
-          "description": "JSON encoded Huawei InAppPurchaseData."
-        },
-        "signature": {
-          "type": "string",
-          "description": "InAppPurchaseData signature."
-        },
-        "persist": {
-          "type": "boolean",
-          "title": "Persist the purchase"
-        }
-      },
-      "title": "Huawei IAP Purchase validation request"
     },
     "apiValidatePurchaseResponse": {
       "type": "object",
@@ -5517,6 +5404,32 @@
         }
       },
       "description": "Write objects to the storage engine."
+    },
+    "nakamaapiEvent": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": "An event name, type, category, or identifier."
+        },
+        "properties": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          },
+          "description": "Arbitrary event property values."
+        },
+        "timestamp": {
+          "type": "string",
+          "format": "date-time",
+          "description": "The time when the event was triggered."
+        },
+        "external": {
+          "type": "boolean",
+          "description": "True if the event came directly from a client call, false otherwise."
+        }
+      },
+      "description": "Represents an event to be passed through the server to registered event handlers."
     },
     "protobufAny": {
       "type": "object",
