# server/core_purchase.go
@@ -258,156 +258,6 @@ func ValidatePurchaseGoogle(ctx context.Context, logger *zap.Logger, db *sql.DB,
 	}, nil
 }
 
-func ValidatePurchaseHuawei(ctx context.Context, logger *zap.Logger, db *sql.DB, userID uuid.UUID, config *IAPHuaweiConfig, inAppPurchaseData, signature string, persist bool) (*api.ValidatePurchaseResponse, error) {
-	validation, data, raw, err := iap.ValidateReceiptHuawei(ctx, httpc, config.PublicKey, config.ClientID, config.ClientSecret, inAppPurchaseData, signature)
-	if err != nil {
-		if err != context.Canceled {
-			var vErr *iap.ValidationError
-			if errors.As(err, &vErr) {
-				logger.Debug("Error validating Huawei receipt", zap.Error(vErr.Err), zap.Int("status_code", vErr.StatusCode), zap.String("payload", vErr.Payload))
-				return nil, vErr
-			} else {
-				logger.Error("Error validating Huawei receipt", zap.Error(err))
-			}
-		}
-		return nil, err
-	}
-
-	if validation.ResponseCode != strconv.Itoa(iap.HuaweiReceiptIsValid) {
-		return nil, status.Error(codes.FailedPrecondition, fmt.Sprintf("Invalid Receipt. Code: %s", validation.ResponseCode))
-	}
-
-	env := api.StoreEnvironment_PRODUCTION
-	if data.PurchaseType == iap.HuaweiSandboxPurchaseType {
-		env = api.StoreEnvironment_SANDBOX
-	}
-
-	sPurchase := &storagePurchase{
-		userID:        userID,
-		store:         api.StoreProvider_HUAWEI_APP_GALLERY,
-		productId:     validation.PurchaseTokenData.ProductId,
-		transactionId: validation.PurchaseTokenData.PurchaseToken,
-		rawResponse:   string(raw),
-		purchaseTime:  parseMillisecondUnixTimestamp(data.PurchaseTime),
-		environment:   env,
-	}
-
-	if !persist {
-		validatedPurchases := []*api.ValidatedPurchase{
-			{
-				ProductId:        sPurchase.productId,
-				TransactionId:    sPurchase.transactionId,
-				Store:            sPurchase.store,
-				PurchaseTime:     timestamppb.New(sPurchase.purchaseTime),
-				ProviderResponse: string(raw),
-				Environment:      sPurchase.environment,
-			},
-		}
-
-		return &api.ValidatePurchaseResponse{ValidatedPurchases: validatedPurchases}, nil
-	}
-
-	purchases, err := upsertPurchases(ctx, db, []*storagePurchase{sPurchase})
-	if err != nil {
-		if err != context.Canceled {
-			logger.Error("Error storing Huawei receipt", zap.Error(err))
-		}
-		return nil, err
-	}
-
-	validatedPurchases := make([]*api.ValidatedPurchase, 0, len(purchases))
-	for _, p := range purchases {
-		suid := p.userID.String()
-		if p.userID.IsNil() {
-			suid = ""
-		}
-		validatedPurchases = append(validatedPurchases, &api.ValidatedPurchase{
-			UserId:           suid,
-			ProductId:        p.productId,
-			TransactionId:    p.transactionId,
-			Store:            p.store,
-			PurchaseTime:     timestamppb.New(p.purchaseTime),
-			CreateTime:       timestamppb.New(p.createTime),
-			UpdateTime:       timestamppb.New(p.updateTime),
-			ProviderResponse: string(raw),
-			SeenBefore:       p.seenBefore,
-			Environment:      p.environment,
-		})
-	}
-
-	return &api.ValidatePurchaseResponse{
-		ValidatedPurchases: validatedPurchases,
-	}, nil
-}
-
-func ValidatePurchaseFacebookInstant(ctx context.Context, logger *zap.Logger, db *sql.DB, userID uuid.UUID, config *IAPFacebookInstantConfig, signedRequest string, persist bool) (*api.ValidatePurchaseResponse, error) {
-	payment, rawResponse, err := iap.ValidateReceiptFacebookInstant(config.AppSecret, signedRequest)
-	if err != nil {
-		if err != context.Canceled {
-			logger.Error("Error validating Facebook Instant receipt", zap.Error(err))
-		}
-		return nil, err
-	}
-
-	sPurchase := &storagePurchase{
-		userID:        userID,
-		store:         api.StoreProvider_FACEBOOK_INSTANT_STORE,
-		productId:     payment.ProductId,
-		transactionId: payment.PurchaseToken,
-		rawResponse:   rawResponse,
-		purchaseTime:  time.Unix(int64(payment.PurchaseTime), 0),
-		environment:   api.StoreEnvironment_PRODUCTION,
-	}
-
-	if !persist {
-		validatedPurchases := []*api.ValidatedPurchase{
-			{
-				UserId:           userID.String(),
-				ProductId:        sPurchase.productId,
-				TransactionId:    sPurchase.transactionId,
-				Store:            sPurchase.store,
-				PurchaseTime:     timestamppb.New(sPurchase.purchaseTime),
-				ProviderResponse: rawResponse,
-				Environment:      sPurchase.environment,
-			},
-		}
-
-		return &api.ValidatePurchaseResponse{ValidatedPurchases: validatedPurchases}, nil
-	}
-
-	purchases, err := upsertPurchases(ctx, db, []*storagePurchase{sPurchase})
-	if err != nil {
-		if err != context.Canceled {
-			logger.Error("Error storing Facebook Instant receipt", zap.Error(err))
-		}
-		return nil, err
-	}
-
-	validatedPurchases := make([]*api.ValidatedPurchase, 0, len(purchases))
-	for _, p := range purchases {
-		suid := p.userID.String()
-		if p.userID.IsNil() {
-			suid = ""
-		}
-		validatedPurchases = append(validatedPurchases, &api.ValidatedPurchase{
-			UserId:           suid,
-			ProductId:        p.productId,
-			TransactionId:    p.transactionId,
-			Store:            p.store,
-			PurchaseTime:     timestamppb.New(p.purchaseTime),
-			CreateTime:       timestamppb.New(p.createTime),
-			UpdateTime:       timestamppb.New(p.updateTime),
-			ProviderResponse: rawResponse,
-			SeenBefore:       p.seenBefore,
-			Environment:      p.environment,
-		})
-	}
-
-	return &api.ValidatePurchaseResponse{
-		ValidatedPurchases: validatedPurchases,
-	}, nil
-}
-
 func GetPurchaseByTransactionId(ctx context.Context, logger *zap.Logger, db *sql.DB, transactionID string) (*api.ValidatedPurchase, error) {
 	var (
 		dbTransactionId string
